Updates to use ORMLite (#11)
* ORM Lite Basic Implementation

* Removes all old database logic

* Update GUI class names and method calls for consistency.

- Renamed GUI classes and method calls from `SelectSeasonRewardGUI` to `SelectSeasonGUI` for uniformity.
- Updated references in the codebase to reflect the changes made.